# ManagedLlama2

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  README.md  build.sh  managedLlama2.sln
native/: CMakeLists.txt  argmax_kernel.cu  argmax_kernel.cuh  common.cuh  convert_kernel.cu  convert_kernel.cuh  cumulative_sum_kernel.cu  cumulative_sum_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  mat_vec_kernel.cu  mat_vec_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  sample_constrained_kernel.cu  sample_constrained_kernel.cuh  sample_top_p_kernel.cu  sample_top_p_kernel.cuh  softmax_kernel.cu  softmax_kernel.cuh  softmax_logits_kernel.cu  softmax_logits_kernel.cuh  sort_kernel.cu  sort_kernel.cuh  vec_mat_kernel.cu  vec_mat_kernel.cuh  vecadd_kernel.cu  vecadd_kernel.cuh
src/: AnsiColorizer.cs  Argmax.cs  Config.cs  Constrain.cs  Constraint.cs  ConstraintGenerator.cs  CumulativeSum.cs  DisposeableList.cs  Downloader.cs  Embedding.cs  Extensions.cs  IColorizer.cs  ISampler.cs  IStateMachine.cs  ITokenizer.cs  ITransformer.cs  ITransition.cs  InertColorizer.cs  JsonStateMachine.cs  MatVec.cs  MatVecResidual.cs  MatVecStrided.cs  MatVecSwiGLU.cs  Model13bDownloader.cs  Model7bDownloader.cs  ModelConverter.cs  Module.cs  PerLayerWeight.cs  QKVMatVec.cs  QWeight.cs  RMSNorm.cs  RoPERotation.cs  RunState.cs  SampleTopP.cs  Sampler.cs  Softmax.cs  SoftmaxLogits.cs  Sort.cs  Token.cs  Tokenizer.cs  (+6 more)
test/: ArgmaxTests.cs  ConstrainTests.cs  ConstraintGeneratorTests.cs  ConvertTests.cs  ConverterTests.cs  CumulativeSumTests.cs  (+24 more)
(+7 files in other folders)
